 - [web] updated Angular Material to version 1.1.0
 - [web] show user's name upon successful login

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [web] restored functionality to save unknown recipient emails to address book on send
 - [web] fixed ripple blocking the form when submitting no values (#3808)
 - [core] strip protocol value from proxyAddresses attribute (#3182)

3.1.5 (2016-08-10)
------------------

New features
 - [web] drag'n'drop of messages in the Mail module (#3497, #3586, #3734, #3788)
 - [web] drag'n'drop of cards in the AddressBook module
 - [eas] added folder merging capabilities

Enhancements
 - [web] improve action progress when login in or sending a message (#3765, #3761)
 - [web] don't allow to send the message while an upload is in progress
 - [web] notify when successfully copied or moved some messages
 - [web] restored indicator in the top banner when a vacation message (auto-reply) is active
 - [web] removed animation when dragging an event to speed up rendering
 - [web] expunge drafts mailbox when a draft is sent and deleted
 - [web] actions of Sieve filters are now sortable
 - [web] show progress indicator when refreshing events/tasks lists
 - [web] updated CKEditor to version 4.5.10

Bug fixes
 - [web] fixed refresh of addressbook when deleting one or many cards
 - [web] reset multiple-selection mode after deleting cards, events or tasks
 - [web] fixed exception when moving tasks to a different calendar
 - [web] fixed printing of long mail (#3731)
 - [web] fixed position of ghost block when creating an event from DnD
 - [web] fixed avatar image in autocompletion
 - [web] restored expunge of current mailbox when leaving the Mail module
 - [web] added support for multiple description values in LDAP entries (#3750)
 - [web] don't allow drag'n'drop of invitations
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)