@@ -14,6 +14,7 @@ Bug fixes
  - [eas] properly escape all email and address fields
  - [web] restored functionality to save unknown recipient emails to address book on send
  - [web] fixed ripple blocking the form when submitting no values (#3808)
+ - [web] fixed error handling when renaming a mailbox
  - [core] strip protocol value from proxyAddresses attribute (#3182)
 
 3.1.5 (2016-08-10)
